--- a/projectduantotnghiep/font_end_reactjs/public/index.html
+++ b/projectduantotnghiep/font_end_reactjs/public/index.html
@@ -17,6 +17,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Tajawal:wght@300&display=swap');
       </style> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="base64.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
